--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "BookCounter",
+  "name": "book-counter",
   "version": "0.0.1",
   "author": "Ionic Framework",
   "homepage": "https://ionicframework.com/",
@@ -21,12 +21,19 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@capacitor-community/sqlite": "^7.0.0",
+    "@capacitor/android": "^7.1.0",
     "@capacitor/app": "7.0.0",
+    "@capacitor/camera": "^7.0.0",
     "@capacitor/core": "7.1.0",
+    "@capacitor/filesystem": "^7.0.0",
     "@capacitor/haptics": "7.0.0",
+    "@capacitor/ios": "^7.1.0",
     "@capacitor/keyboard": "7.0.0",
     "@capacitor/status-bar": "7.0.0",
+    "@capacitor/toast": "^7.0.0",
     "@ionic/angular": "^8.0.0",
+    "@jsverse/transloco": "^7.6.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
