--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "build": "ng build",
     "watch": "ng build --watch --configuration development",
     "test": "ng test",
-    "lint": "ng lint"
+    "lint": "ng lint",
+    "prettier": "npx prettier . --write"
   },
   "private": true,
   "dependencies": {
@@ -21,6 +22,7 @@
     "@angular/platform-browser": "^19.0.0",
     "@angular/platform-browser-dynamic": "^19.0.0",
     "@angular/router": "^19.0.0",
+    "@angular/service-worker": "^19.0.0",
     "@capacitor-community/sqlite": "^7.0.0",
     "@capacitor/android": "^7.1.0",
     "@capacitor/app": "7.0.0",
@@ -33,6 +35,7 @@
     "@capacitor/status-bar": "7.0.0",
     "@capacitor/toast": "^7.0.0",
     "@ionic/angular": "^8.0.0",
+    "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
@@ -65,6 +68,7 @@
     "karma-coverage": "~2.2.0",
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
+    "prettier": "3.5.3",
     "typescript": "~5.6.3"
   },
   "description": "An Ionic project"
