--- a/package.json
+++ b/package.json
@@ -5,12 +5,19 @@
   "homepage": "https://ionicframework.com/",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
-    "build": "ng build",
-    "watch": "ng build --watch --configuration development",
+    "start": "npm run copy:sql:wasm && ng serve",
+    "build:native": "npm run remove:sql:wasm && ng build",
+    "watch": "npm run copy:sql:wasm && ng build --watch --configuration development",
     "test": "ng test",
     "lint": "ng lint",
-    "prettier": "npx prettier . --write"
+    "ionic:serve:before": "npm run copy:sql:wasm",
+    "copy:sql:wasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm src/assets",
+    "remove:sql:wasm": "rimraf src/assets/sql-wasm.wasm",
+    "ionic:ios": "npm run remove:sql:wasm && ionic capacitor build ios",
+    "ionic:android": "npm run remove:sql:wasm && ionic capacitor build android",
+    "electron:install": "cd electron && npm install && cd ..",
+    "electron:prepare": "npm run remove:sql:wasm && ng build && npx cap sync @capacitor-community/electron && npx cap copy @capacitor-community/electron",
+    "electron:start": "npm run electron:prepare && cd electron && npm run electron:start"
   },
   "private": true,
   "dependencies": {
@@ -40,7 +47,8 @@
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0"
+    "zone.js": "~0.15.0",
+    "sql.js": "1.11.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
@@ -69,7 +77,11 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.5.3",
-    "typescript": "~5.6.3"
+    "typescript": "~5.6.3",
+    "copyfiles": "^2.4.1",
+    "vm-browserify": "^1.1.2",
+    "crypto-browserify": "^3.12.0",
+    "stream-browserify": "^3.0.0"
   },
   "description": "An Ionic project"
 }
