--- a/package.json
+++ b/package.json
@@ -44,11 +44,13 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
+    "@ngx-formly/core": "^7.0.0-alpha.1",
+    "@ngx-formly/ionic": "^7.0.0-alpha.1",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
+    "sql.js": "1.11.0",
     "tslib": "^2.3.0",
-    "zone.js": "~0.15.0",
-    "sql.js": "1.11.0"
+    "zone.js": "~0.15.0"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "^19.0.0",
@@ -65,6 +67,8 @@
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
     "@typescript-eslint/parser": "^8.18.0",
+    "copyfiles": "^2.4.1",
+    "crypto-browserify": "^3.12.0",
     "eslint": "^9.16.0",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
@@ -77,11 +81,9 @@
     "karma-jasmine": "~5.1.0",
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.5.3",
+    "stream-browserify": "^3.0.0",
     "typescript": "~5.6.3",
-    "copyfiles": "^2.4.1",
-    "vm-browserify": "^1.1.2",
-    "crypto-browserify": "^3.12.0",
-    "stream-browserify": "^3.0.0"
+    "vm-browserify": "^1.1.2"
   },
   "description": "An Ionic project"
 }
