--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
   "name": "book-counter",
   "version": "0.0.1",
-  "author": "Ionic Framework",
-  "homepage": "https://ionicframework.com/",
+  "author": "Alderaeney",
+  "homepage": "https://github.com/AlderaeneyApps/BookCount",
   "scripts": {
     "ng": "ng",
     "start": "npm run copy:sql:wasm && ng serve",
@@ -44,8 +44,8 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
-    "@ngx-formly/core": "^7.0.0-alpha.1",
-    "@ngx-formly/ionic": "^7.0.0-alpha.1",
+    "@ngx-formly/core": "^7.0.0-next.0",
+    "@ngx-formly/ionic": "^7.0.0-next.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "sql.js": "1.11.0",
