--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "build:native": "npm run remove:sql:wasm && ng build",
     "watch": "npm run copy:sql:wasm && ng build --watch --configuration development",
     "test": "ng test",
+    "format": "prettier --write \"src/**/*.{ts,html,scss}\"",
     "lint": "ng lint",
     "ionic:serve:before": "npm run copy:sql:wasm",
     "copy:sql:wasm": "copyfiles -u 3 node_modules/sql.js/dist/sql-wasm.wasm src/assets",
@@ -70,9 +71,11 @@
     "copyfiles": "^2.4.1",
     "crypto-browserify": "^3.12.0",
     "eslint": "^9.16.0",
+    "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsdoc": "^48.2.1",
     "eslint-plugin-prefer-arrow": "1.2.2",
+    "eslint-plugin-prettier": "^5.4.0",
     "jasmine-core": "~5.1.0",
     "jasmine-spec-reporter": "~5.0.0",
     "karma": "~6.4.0",
