--- a/package.json
+++ b/package.json
@@ -33,10 +33,10 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.0.0",
     "@capacitor-community/sqlite": "^7.0.0",
-    "@capacitor/android": "^7.1.0",
+    "@capacitor/android": "^7.4.1",
     "@capacitor/app": "7.0.0",
     "@capacitor/camera": "^7.0.0",
-    "@capacitor/core": "7.1.0",
+    "@capacitor/core": "7.4.0",
     "@capacitor/filesystem": "^7.0.0",
     "@capacitor/haptics": "7.0.0",
     "@capacitor/ios": "^7.1.0",
@@ -46,8 +46,8 @@
     "@ionic/angular": "^8.0.0",
     "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
-    "@ngx-formly/core": "^7.0.0-next.0",
-    "@ngx-formly/ionic": "^7.0.0-next.0",
+    "@ngx-formly/core": "^7.0.0",
+    "@ngx-formly/ionic": "^7.0.0",
     "ionicons": "^7.0.0",
     "rxjs": "~7.8.0",
     "sql.js": "1.11.0",
