--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "rxjs": "~7.8.0",
     "sql.js": "1.11.0",
     "tslib": "^2.3.0",
+    "zod": "^4.0.14",
     "zone.js": "~0.15.0"
   },
   "devDependencies": {
