--- a/package.json
+++ b/package.json
@@ -33,18 +33,18 @@
     "@angular/router": "^19.0.0",
     "@angular/service-worker": "^19.0.0",
     "@capacitor-community/sqlite": "^7.0.0",
-    "@capacitor/android": "^7.4.1",
-    "@capacitor/app": "7.0.0",
+    "@capacitor/android": "^7.0.0",
+    "@capacitor/app": "^7.0.0",
     "@capacitor/camera": "^7.0.0",
-    "@capacitor/core": "7.4.0",
+    "@capacitor/core": "^7.0.0",
     "@capacitor/filesystem": "^7.0.0",
-    "@capacitor/haptics": "7.0.0",
-    "@capacitor/ios": "^7.1.0",
-    "@capacitor/keyboard": "7.0.0",
-    "@capacitor/status-bar": "7.0.0",
+    "@capacitor/haptics": "^7.0.0",
+    "@capacitor/ios": "^7.0.0",
+    "@capacitor/keyboard": "^7.0.0",
+    "@capacitor/status-bar": "^7.0.0",
     "@capacitor/toast": "^7.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
-    "@ionic/angular": "^8.0.0",
+    "@ionic/angular": "^8.7.3",
     "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
     "@ngx-formly/core": "^7.0.0",
@@ -66,7 +66,7 @@
     "@angular/cli": "^19.0.0",
     "@angular/compiler-cli": "^19.0.0",
     "@angular/language-service": "^19.0.0",
-    "@capacitor/cli": "7.1.0",
+    "@capacitor/cli": "^7.0.0",
     "@ionic/angular-toolkit": "^12.0.0",
     "@types/jasmine": "~5.1.0",
     "@typescript-eslint/eslint-plugin": "^8.18.0",
