--- a/package.json
+++ b/package.json
@@ -88,7 +88,7 @@
     "karma-jasmine-html-reporter": "~2.1.0",
     "prettier": "3.5.3",
     "stream-browserify": "^3.0.0",
-    "typescript": "~5.9.2",
+    "typescript": "5.8.3",
     "vm-browserify": "^1.1.2"
   },
   "description": "Mobile application for keeping track of owned books or other types of collections"
