--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@capacitor/status-bar": "^7.0.0",
     "@capacitor/toast": "^7.0.0",
     "@capawesome/capacitor-android-edge-to-edge-support": "^7.2.3",
+    "@capawesome/capacitor-file-picker": "^7.2.0",
     "@ionic/angular": "^8.7.3",
     "@ionic/pwa-elements": "^3.3.0",
     "@jsverse/transloco": "^7.6.1",
